# cpp_vscode_template

./: CMakeLists.txt  README.md  hello_world.cpp
